--- a/src/it/simple-it/pom.xml
+++ b/src/it/simple-it/pom.xml
@@ -21,10 +21,10 @@
         <version>@project.version@</version>
         <executions>
           <execution>
-            <id>touch</id>
+            <id>demo</id>
             <phase>validate</phase>
             <goals>
-              <goal>touch</goal>
+              <goal>demo</goal>
             </goals>
           </execution>
         </executions>
